<resources>
    <string name="app_name">GetTaxi-Drivers</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">הגדרות</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="firstname">שם פרטי</string>
    <string name="lastname">שם משפחה</string>
    <string name="seconpassword">סיסמא שנית</string>
    <string name="creditcard">כרטיס אשראי</string>
    <string name="phonenumber">מספר טלפון</string>
    <string name="error_passwords_dont_match">סיסמה אינה תואמת</string>
    <string name="identitynumber">תעודת זהות</string>
    <string name="waiting_rides">נסיעות ממתינות</string>
    <string name="my_rides">הנסיעות שלי</string>
    <string name="exit">יציאה</string>
    <string name="sourcelocation">כתובת איסוף:</string>
    <string name="targetlocation">כתובת יעד:</string>
    <string name="rememberMe">זכור אותי</string>
    <string name="receiveRide">קבל נסיעה</string>
    <string name="filter">סינון</string>
    <string name="distance">מרחק</string>
    <string name="city">עיר איסוף</string>
    <string name="distance_kilometers">מרחק (קילומטרים)</string>
    <string name="choose_city">הכנס עיר</string>
    <string name="locationrequired">מיקום נצרך</string>
    <string name="locationdescription">שירות מיקום אינו פעיל. על מנת להמשיך הדלק את מיקום המכשיר.</string>
    <string name="settings">הגדרות</string>
    <string name="_continue">המשך</string>
    <string name="pickupDate">תאריך איסוף</string>
    <string name="cancel">ביטול</string>
    <string name="km">ק\"מ</string>
    <string name="distancefromlocation">המרחק ממיקומך:</string>
    <string name="call">התקשר</string>
    <string name="sendsms">שלח SMS</string>
    <string name="sendmail">שלח Mail</string>
    <string name="notifypassenger">הודע לנוסע</string>
    <string name="availibleRides">נסיעות ממתינות</string>
    <string name="from">מקום איסוף:</string>
</resources>
