<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_availableRides"
            android:icon="@drawable/ic_available_black"
            android:title="@string/waiting_rides" />
        <item
            android:id="@+id/nav_myRides"
            android:icon="@drawable/ic__taxi_black"
            android:title="@string/my_rides" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_black"
            android:title="@string/exit" />
       <!-- <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
