<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".controller.controller.fragments.NotifyPassengerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="#8effffff"/>


        <RelativeLayout
            android:id="@+id/iconLayout"
            android:layout_width="match_parent"
            android:layout_height="145dp">

            <ImageView
                android:id="@+id/callIcon"
                android:layout_width= "70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:src="@drawable/call_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/callIcon"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:textColor="#fff"
                android:text="@string/call" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#8effffff"
                android:layout_toLeftOf="@id/callIcon"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:id="@+id/smsIcon"
                android:layout_width= "70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/callIcon"
                android:layout_marginRight="55dp"
                android:src="@drawable/sms_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smsIcon"
                android:layout_marginTop="10dp"
                android:layout_marginRight="155dp"
                android:layout_alignParentRight="true"
                android:textColor="#fff"
                android:text="@string/sendsms" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#8effffff"
                android:layout_toLeftOf="@id/smsIcon"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:id="@+id/mailIcon"
                android:layout_width= "70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/smsIcon"
                android:layout_marginRight="55dp"
                android:src="@drawable/mail_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mailIcon"
                android:layout_marginTop="10dp"
                android:layout_marginRight="285dp"
                android:layout_alignParentRight="true"
                android:textColor="#fff"
                android:text="@string/sendmail" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#8effffff" />


    </LinearLayout>

</FrameLayout>
