<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/cardview_dark_background"
        android:fitsSystemWindows="true"
        app:itemTextColor="#FFFFFF"
        app:headerLayout="@layout/nav_header_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/nav_header_main"
                android:id="@+id/header"/>

            <TextView
                android:id="@+id/nav_availableRides"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/header"
                android:drawableRight="@drawable/ic_available_black"
                android:layout_alignParentRight="true"
                android:drawablePadding="25dp"
                android:paddingRight="25dp"
                android:paddingTop="11dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/waiting_rides"
                android:textColor="#FFF"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/nav_myRides"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/nav_availableRides"
                android:drawableRight="@drawable/ic__taxi_yellow"
                android:layout_alignParentRight="true"
                android:drawablePadding="25dp"
                android:paddingRight="25dp"
                android:paddingTop="11dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/my_rides"
                android:textColor="#FFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/nav_exit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/nav_myRides"
                android:drawableRight="@drawable/ic_exit_black"
                android:layout_alignParentRight="true"
                android:drawablePadding="25dp"
                android:paddingRight="25dp"
                android:paddingTop="11dp"
                tools:ignore="RtlSymmetry"
                android:text="@string/exit"
                android:textColor="#FFF"
                android:textSize="17sp" />

        <!--    <View
                android:layout_marginTop="3dp"
                android:layout_below="@id/nav_exit"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fffffff"/>

            <TextView
                android:id="@+id/filterTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_exit"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:text="@string/filter"
                android:textColor="#9cffffff"
                android:textSize="17sp"/>


            <TextView
                android:id="@+id/disatnceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/filterTxt"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:text="@string/distance_kilometers"
                android:textColor="#FFF" />



            <TextView
                android:id="@+id/cityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/disatnceText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/city"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/filter_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/cityTxt"
                android:hint="@string/choose_city"
                android:gravity="center"
                android:textColor="#abffffff"
                android:inputType="text" />

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter_city"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/pickupDate"
                android:textColor="#FFF"
                android:textSize="15sp" />

-->

        </RelativeLayout>


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

